# cainam-arc

./: .env.example  Cargo.toml
.cursor/rules/: cainam-core.mdc
memory-bank/: productContext.md
phases_output/: affaan-arc_analysis.txt  complete_report.md  final_analysis.md  phase1_discovery.md  phase2_planning.md  phase3_analysis.md  phase4_synthesis.md  phase5_consolidation.md
rig-core/: Cargo.toml
rig-mongodb/: Cargo.toml
rig-solana-trader/: Cargo.toml  docker-compose.yml
rig-solana-trader/examples/: autonomous_trader.rs  interactive_trader.rs  simple_trader.rs  test_full_system.rs  test_vector_store.rs
rig-solana-trader/src/: analysis.rs  lib.rs  main.rs  market_data.rs  state.rs  twitter.rs  wallet.rs
rig-solana-trader/src/agents/: data_ingestion.rs  execution.rs  mod.rs  prediction.rs  twitter.rs
rig-solana-trader/src/cli/: mod.rs
rig-solana-trader/src/data_ingestion/: mod.rs
rig-solana-trader/src/database/: mod.rs  positions.rs  sync.rs
rig-solana-trader/src/decision/: mod.rs
rig-solana-trader/src/dex/: jupiter.rs  mod.rs
rig-solana-trader/src/execution/: mod.rs
rig-solana-trader/src/integrations/: twitter.rs
rig-solana-trader/src/market_data/: birdeye.rs  loaders.rs  mod.rs  provider.rs  pumpfun.rs  storage.rs  streaming.rs  vector_store.rs
rig-solana-trader/src/personality/: mod.rs
rig-solana-trader/src/prediction/: mod.rs
rig-solana-trader/src/storage/: schema.rs
rig-solana-trader/src/strategy/: analytics.rs  execution.rs  llm.rs  mod.rs  pipeline.rs  risk.rs  technical.rs
rig-solana-trader/src/twitter/: mod.rs
src/database/: mod.rs  sync.rs
src/personality/: mod.rs
src/strategy/: llm.rs  mod.rs
