[workspace]
resolver = "2"
members = [
    "rig-core",
    "rig-mongodb"
]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
anyhow = "1.0"
async-trait = "0.1"
base64 = "0.21"
bincode = "1.3"
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
futures = "0.3"
mongodb = { version = "2.8", features = ["tokio-runtime"] }
reqwest = { version = "0.11", features = ["json", "cookies", "multipart"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.43.1", features = ["full"] }
tokio-tungstenite = { version = "0.20", features = ["native-tls"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rig-core = { path = "rig-core" }